Fixed locations being aligned in bizarre ways

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@ a {
 
 .event-header {
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .attendingButton {
